# RustIO

./: .gitignore  Cargo.toml  Dockerfile.rustio  Dockerfile.rustio.legacy  README.md  docker-compose.yml  start-source.sh  start.sh
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
crates/rustio-admin/: Cargo.toml
crates/rustio-admin/src/: auth.rs  error.rs  lib.rs  routes.rs  state.rs
crates/rustio-admin/tests/: alert_delivery_external.rs  auth_external.rs  s3_conformance.rs
crates/rustio-cli/: Cargo.toml
crates/rustio-cli/src/: main.rs
crates/rustio-core/: Cargo.toml
crates/rustio-core/src/: lib.rs  permission.rs  types.rs
crates/rustio-server/: Cargo.toml
crates/rustio-server/src/: main.rs
web/console/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
web/console/src/: App.tsx  index.css
web/console/src/api/: client.ts  services.ts
web/console/src/components/: ConfirmActionDialog.tsx  StatCard.tsx
web/console/src/hooks/: useEventStream.ts
web/console/src/layout/: AppShell.tsx
web/console/src/pages/: AlertsPage.tsx  AuditPage.tsx  BucketsPage.tsx  ConfigPage.tsx  DashboardPage.tsx  IamPage.tsx  JobsPage.tsx  LoginPage.tsx  MetricsPage.tsx  ObjectsPage.tsx  OidcCallbackPage.tsx  OperationsPage.tsx  ReplicationPage.tsx  SecurityPage.tsx  TenantsPage.tsx
web/console/src/types/: index.ts
web/console/src/utils/: auth.ts  bilingual.ts
