[workspace]
members = [
  "crates/rustio-core",
  "crates/rustio-admin",
  "crates/rustio-server",
  "crates/rustio-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["RustIO Contributors"]

[workspace.dependencies]
aes-gcm = { version = "0.10", features = ["aes"] }
anyhow = "1.0"
async-stream = "0.3"
axum = { version = "0.8", features = ["http1", "http2", "json", "tokio", "query", "ws", "macros"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
crc32fast = "1.4"
csv = "1.3"
futures = "0.3"
hmac = "0.12"
hex = "0.4"
http = "1.2"
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
md-5 = "0.10"
percent-encoding = "2.3"
quick-xml = { version = "0.38", features = ["serialize"] }
reed-solomon-erasure = "6.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs", "io-util", "process"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.15", features = ["serde", "v4"] }
