[package]
name = "rustio"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "rustio"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rustio-admin = { path = "../rustio-admin" }
